--- a/src/styles.less
+++ b/src/styles.less
@@ -15,3 +15,21 @@ p {
   margin: 0;
   padding: 0;
 }
+
+.bigHalfCircle path {
+  fill: #3498db;
+  stroke: #3498db;
+}
+
+h1, h2, h3, h4, h5 {
+  text-align: center;
+  width: 100%;
+}
+
+.divider {
+  position: relative;
+  height: 150px;
+  background: linear-gradient(#ff9d2f, #ff6126);
+  border-bottom-left-radius: 50% 95%;
+  border-bottom-right-radius: 50% 95%;
+}
