--- a/src/assets/styles/our-services.component.less
+++ b/src/assets/styles/our-services.component.less
@@ -2,6 +2,8 @@
 
 .services {
   &__container {
+    max-width: 960px;
+    margin: 0 auto;
     .pot {
       background-image: url(/assets/images/icons/boilers.svg);
     }
