--- a/src/assets/shared-styles/shared-styles.less
+++ b/src/assets/shared-styles/shared-styles.less
@@ -3,6 +3,9 @@
 @header-footer-background: #dbdfe1;
 @links-color: #FF9E41;
 
+@odd-color: #ff9d2f; // цвет четных блоков
+@even-color: #efefef; // цвет четных блоков
+
 .default-text {
   font-size: 16px;
   line-height: 32px;
