--- a/src/app/components/our-works/our-works.component.html
+++ b/src/app/components/our-works/our-works.component.html
@@ -23,8 +23,8 @@
       <div class="work-aps-logistic">
         <div class="work-aps-logistic__title"><h2>APS Solver</h2></div>
         <div class="work-aps-logistic__items">
-          <div class="row">
-            <div class="item col-12 col-sm-6 col-lg-4 col-xl-4" *ngFor="let work of ourWork">
+          <div class="row d-flex justify-content-center ">
+            <div class="item col-12 col-sm-6 col-lg-4 col-xl-4" *ngFor="let work of apsLogisticWorks">
               <img [src]="work" alt="Examples of our work" class="item__images">
             </div>
           </div>
@@ -37,22 +37,8 @@
       <div class="work-riviera">
         <div class="work-riviera__title"><h2>Гостиничный Комплекс «Ривьера Кантри Клаб»</h2></div>
         <div class="work-riviera__items">
-          <div class="row">
-            <div class="item col-12 col-sm-6 col-lg-4 col-xl-4" *ngFor="let work of ourWork">
-              <img [src]="work" alt="Examples of our work" class="item__images">
-            </div>
-          </div>
-        </div>
-        <div class="astrodivider">
-          <div class="astrodividermask"></div>
-          <span><i>&#10038;</i></span>
-        </div>
-      </div>
-      <div class="work-gatovo">
-        <div class="work-gatovo__title"><h2>Пенопластовый завод в Гатово</h2></div>
-        <div class="work-gatovo__items">
-          <div class="row">
-            <div class="item col-12 col-sm-6 col-lg-4 col-xl-4" *ngFor="let work of ourWork">
+          <div class="row d-flex justify-content-center">
+            <div class="item col-12 col-sm-6 col-lg-4 col-xl-4" *ngFor="let work of rivieraWorks">
               <img [src]="work" alt="Examples of our work" class="item__images">
             </div>
           </div>
@@ -65,7 +51,7 @@
       <div class="work-razdolle">
         <div class="work-razdolle__title"><h2>Эко-ресторан Раздолле</h2></div>
         <div class="work-razdolle__items">
-          <div class="row">
+          <div class="row d-flex justify-content-center">
             <div class="item col-12 col-sm-6 col-lg-4 col-xl-4" *ngFor="let work of razdolleWorks">
               <img [src]="work" alt="Examples of our work" class="item__images">
             </div>
@@ -79,7 +65,7 @@
       <div class="work-other-examples">
         <div class="work-other-examples__title"><h2>Остальные работы</h2></div>
         <div class="work-other-examples__items">
-          <div class="row">
+          <div class="row d-flex justify-content-center">
             <div class="item col-12 col-sm-6 col-lg-4 col-xl-4" *ngFor="let work of ourWork">
               <img [src]="work" alt="Examples of our work" class="item__images">
             </div>
