going to finish

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -6,7 +6,7 @@
       <div class="info__about-me">
 
         <div class="phone">
-          <div class="phone__icon"></div>
+          <div class="phone__icon" (click)="call()"></div>
           <div class="phone__number">
             <a class="phone-link" href="tel: +375296030773">+375 (29) 603-07-73</a>
           </div>
