--- a/src/assets/styles/about-us.component.less
+++ b/src/assets/styles/about-us.component.less
@@ -1,13 +1,14 @@
 @import "../shared-styles/shared-styles.less";
 
 .about-us {
+  padding: 24px 0;
   &__container {
 
     .info {
       display: flex;
 
       &__yandex-map {
-        height: calc(100vh - 189px);
+        height: calc(100vh - 237px);
         width: 50%;
       }
 
@@ -98,7 +99,7 @@
         display: block;
 
         &__yandex-map {
-          height: calc(100vh - 189px);
+          height: calc(100vh - 169px);
           width: 100%;
         }
 
