--- a/src/assets/styles/footer.component.less
+++ b/src/assets/styles/footer.component.less
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   justify-self: flex-end;
+  background-color: @background-color;
 
   .social-links {
     display: flex;
