--- a/src/styles.less
+++ b/src/styles.less
@@ -10,6 +10,7 @@
 html, body {
   overflow-x: hidden;
   height: 100%;
+  background-color: @background-color;
 }
 
 p {
@@ -25,6 +26,7 @@ p {
 h1, h2, h3, h4, h5 {
   text-align: center;
   width: 100%;
+  font-style: italic;
 }
 
 .divider-block {
@@ -44,6 +46,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .divider {
+  background-color: white;
   &__odd {
     background: @odd-color;
   }
