--- a/src/assets/styles/main-page.component.less
+++ b/src/assets/styles/main-page.component.less
@@ -136,5 +136,15 @@ ngb-carousel.carousel.slide:focus {
         }
       }
     }
+
+    .our-works {
+      padding: 32px 24px;
+    }
+  }
+
+  @media @max-phone {
+    .our-works {
+      padding: 24px 16px;
+    }
   }
 }
