going to finish

--- a/src/app/components/our-works/our-works.component.html
+++ b/src/app/components/our-works/our-works.component.html
@@ -1,76 +1,8 @@
 <div class="catalog">
-  <div class="we-are-doing">
-    <div class="container">
-      <div class="we-are-doing__title"><h1>Мы предлагаем следующие услуги</h1></div>
-      <div class="we-are-doing__list">
-        <ol>
-          <li>
-            <div class="our-work-list-item">Чистка, ремонт и монтаж каминов, дымоходов и банных печей</div>
-          </li>
-          <li>
-            <div class="our-work-list-item">Обслуживание, проверка и контроль функционирования системы дымохода газовых
-              котлов
-            </div>
-          </li>
-          <li>
-            <div class="our-work-list-item">Выдача актов о проверке вентиляционных и дымоудоляющих систем</div>
-          </li>
-          <li>
-            <div class="our-work-list-item">Пуско-наладка газовых и твёрдотоплевных котлов с сопутствующем обслуживанием
-            </div>
-          </li>
-          <li>
-            <div class="our-work-list-item">Выдача актов предварительного заключения с дальнейшим сопровождением</div>
-          </li>
-          <li>
-            <div class="our-work-list-item">Возможность обслуживания как частных, так и юридических лиц</div>
-          </li>
-          <li>
-            <div class="our-work-list-item">Возможность обслуживания точек общепита с газовым и твёрдотоплевным
-              оборудованием
-            </div>
-          </li>
-        </ol>
-      </div>
-    </div>
-  </div>
   <div class="our-works">
     <div class="container">
-      <div class="work-aps-logistic">
-        <div class="work-aps-logistic__title"><h2>APS Solver</h2></div>
-        <div class="work-aps-logistic__items">
-          <div class="row d-flex justify-content-center ">
-            <div class="item col-12 col-sm-6 col-lg-4 col-xl-4" *ngFor="let work of apsLogisticWorks">
-              <img [src]="work" alt="Examples of our work" class="item__images">
-            </div>
-          </div>
-        </div>
-
-      </div>
-      <div class="work-riviera">
-        <div class="work-riviera__title"><h2>Гостиничный Комплекс «Ривьера Кантри Клаб»</h2></div>
-        <div class="work-riviera__items">
-          <div class="row d-flex justify-content-center">
-            <div class="item col-12 col-sm-6 col-lg-4 col-xl-4" *ngFor="let work of rivieraWorks">
-              <img [src]="work" alt="Examples of our work" class="item__images">
-            </div>
-          </div>
-        </div>
-
-      </div>
-      <div class="work-razdolle">
-        <div class="work-razdolle__title"><h2>Эко-ресторан Раздолле</h2></div>
-        <div class="work-razdolle__items">
-          <div class="row d-flex justify-content-center">
-            <div class="item col-12 col-sm-6 col-lg-4 col-xl-4" *ngFor="let work of razdolleWorks">
-              <img [src]="work" alt="Examples of our work" class="item__images">
-            </div>
-          </div>
-        </div>
-
-      </div>
       <div class="work-other-examples">
-        <div class="work-other-examples__title"><h2>Остальные работы</h2></div>
+        <div class="work-other-examples__title"><h2>Примеры наших работ</h2></div>
         <div class="work-other-examples__items">
           <div class="row d-flex justify-content-center">
             <div class="item col-12 col-sm-6 col-lg-4 col-xl-4" *ngFor="let work of ourWork">
