--- a/src/assets/styles/catalog.component.less
+++ b/src/assets/styles/catalog.component.less
@@ -3,62 +3,9 @@
 .catalog {
   height: 100%;
 
-  .we-are-doing{
-
+  .work-other-examples{
     &__title {
       padding: 24px 0;
-    }
-
-    &__list{
-      counter-reset: li;
-      list-style: none;
-      font: 18px "Trebuchet MS", "Lucida Sans";
-      padding: 0;
-      text-shadow: 0 1px 0 rgba(255,255,255,.5);
-
-      ol {
-        list-style: none;
-      }
-
-      .our-work-list-item {
-        position: relative;
-        display: block;
-        padding: .4em .4em .4em .8em;
-        margin: .5em 0 .5em 2.5em;
-        background: #f18736;
-        color: #444;
-        text-decoration: none;
-        transition: all .3s ease-out;
-      }
-      .our-work-list-item:hover {background: @odd-color;}
-      .our-work-list-item:before {
-        content: counter(li);
-        counter-increment: li;
-        position: absolute;
-        left: -2.5em;
-        top: 0;
-        margin-top: 0;
-        background: #f18736;
-        height: 100%;
-        width: 2em;
-        font-weight: bold;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-      .our-work-list-item:after {
-        position: absolute;
-        content: "";
-        border: .5em solid transparent;
-        left: -1em;
-        top: 50%;
-        margin-top: -.5em;
-        transition: all .3s ease-out;
-      }
-      .our-work-list-item:hover:after {
-        left: -.5em;
-        border-left-color: #f18736;
-      }
     }
   }
 
