--- a/src/assets/styles/our-services.component.less
+++ b/src/assets/styles/our-services.component.less
@@ -3,6 +3,7 @@
 .services {
   &__container {
     max-width: 960px;
+    padding: 16px;
     margin: 0 auto;
     .pot {
       background-image: url(/assets/images/icons/boilers.svg);
