--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -47,15 +47,11 @@
           <ngb-carousel *ngIf="cafes" [showNavigationIndicators]="false" style="width: 100%;">
             <ng-template ngbSlide *ngFor="let cafe of cafes">
               <h2 style="text-align: center">{{cafe.title}}</h2>
-              <!--<div class="astrodivider">
-                <div class="astrodividermask"></div>
-                <span><i>&#10038;</i></span></div>-->
               <div class="picsum-img-wrapper" style="width: 100%;">
                 <img [src]="cafe.img" alt="Random first slide" style="width: 100%;">
               </div>
-              <!--<div class="carousel-caption">
-                Text from cafe
-              </div>-->
+              <div class="carousel-caption">
+              </div>
               <div>{{cafe.text}}</div>
             </ng-template>
           </ngb-carousel>
