--- a/src/assets/styles/about-us.component.less
+++ b/src/assets/styles/about-us.component.less
@@ -124,7 +124,7 @@
               margin: 0 auto;
               border: none;
               border-radius: 2px;
-              padding: 0 16px;
+              padding: 4px 16px;
             }
           }
         }
