--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -31,17 +31,17 @@
             Обратная связь:
           </div>
           <div class="form" [formGroup]="emailForm">
-            <mat-form-field class="">
-              <input matInput placeholder="Ваше имя" formControlName="name" >
-            </mat-form-field>
-            <mat-form-field class="">
-              <input matInput placeholder="Email" formControlName="email" >
-            </mat-form-field>
-            <mat-form-field class="">
-              <input matInput placeholder="Телефон" formControlName="phone" >
+            <mat-form-field class="example-full-width">
+              <input matInput placeholder="Ваше имя" formControlName="name" required>
             </mat-form-field>
             <mat-form-field class="example-full-width">
-              <textarea matInput placeholder="Сообщение" formControlName="message"></textarea> <!-- matTextareaAutosize matAutosizeMinRows=4 -->
+              <input matInput placeholder="Email" formControlName="email" required>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <input matInput placeholder="Телефон" maxlength="13" formControlName="phone" required>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <textarea matInput placeholder="Сообщение" formControlName="message" required></textarea> <!-- matTextareaAutosize matAutosizeMinRows=4 -->
             </mat-form-field>
             <button class="form__button" (click)="sendMail()" [disabled]="!emailForm.valid">Отправить</button>
           </div>
