small fixes in less

--- a/src/assets/styles/header.component.less
+++ b/src/assets/styles/header.component.less
@@ -163,7 +163,7 @@
     &__small-menu.opened {
       display: block;
       height: calc(100vh - 65px);
-      background: white;
+      background: #efefef;
       position: absolute;
       top: 65px;
       width: 100%;
