--- a/src/assets/styles/about-us.component.less
+++ b/src/assets/styles/about-us.component.less
@@ -9,7 +9,7 @@
       display: flex;
 
       &__yandex-map {
-        height: calc(100vh - 237px);
+        height: auto;
         width: 50%;
       }
 
@@ -76,7 +76,7 @@
           &__icon {
             background: url(/assets/images/icons/location.svg) 0 0 no-repeat;
             height: 30px;
-            width: 30px;
+            min-width: 30px;
             margin-left: 24px;
             background-size: contain;
             @media @max-tablet {
@@ -112,7 +112,7 @@
             font-size: 22px;
             text-align: center;
           }
-      
+
           .form {
             display: flex;
             flex-direction: column;
