--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -41,7 +41,7 @@
               <input matInput placeholder="Телефон" maxlength="13" formControlName="phone" required>
             </mat-form-field>
             <mat-form-field class="example-full-width">
-              <textarea matInput placeholder="Сообщение" formControlName="message" required></textarea> <!-- matTextareaAutosize matAutosizeMinRows=4 -->
+              <textarea matInput placeholder="Сообщение" formControlName="message"></textarea>
             </mat-form-field>
             <button class="form__button" (click)="sendMail()" [disabled]="!emailForm.valid">Отправить</button>
           </div>
