--- a/src/assets/styles/about-us.component.less
+++ b/src/assets/styles/about-us.component.less
@@ -18,7 +18,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: left;
         padding-left: 48px;
 
         .phone {
@@ -101,10 +101,9 @@
         }
 
         .feedback-form {
-          margin: 20px auto;
-          padding: 10px 40px;
-          //background: #ff9d2f;
-          border-top: 1px solid #ff9d2f;
+          margin: 20px 0 0 24px;
+          padding: 10px 40px; 
+          border: 1px solid #ff9d2f;
           width: 80%;
 
           .form-heading {
@@ -144,6 +143,22 @@
             padding: 24px 0 0 0;
             font-size: 22px;
           }
+          .feedback-form {
+            width: 100%;
+            margin-left: 0;
+          }
+        }
+
+        @media @max-phone {
+
+          .feedback-form {
+            padding: 10px;
+            .form {
+              &__button {
+                    font-size: 16px;
+              }
+            }
+          } 
         }
       }
 
@@ -158,7 +173,7 @@
       app-our-services {
         display: block;
       }
-    }
+  }
 
     @media @max-tablet {
       padding: 0 24px;
