--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="head-title__title">
         <h1 class="title">Профессиональные услуги трубочиста</h1>
-        <h4 class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, nemo.</h4>
+        <h4 class="title">У нас Вы можете заказать услуги по чистке, установке и демонтажу дымоходов.</h4>
         <button class="title-button" mat-button routerLink="/about-us">Связаться с нами</button>
       </div>
     </div>
