--- a/src/assets/shared-styles/shared-styles.less
+++ b/src/assets/shared-styles/shared-styles.less
@@ -22,8 +22,8 @@
 }
 
 .social-icon {
-  height: 40px;
-  width: 40px;
+  min-height: 40px;
+  min-width: 40px;
   margin-left: 24px;
   background-size: contain;
 }
