--- a/src/assets/styles/main-page.component.less
+++ b/src/assets/styles/main-page.component.less
@@ -20,6 +20,7 @@ ngb-carousel.carousel.slide:focus {
       .title {
         text-align: right;
         padding: 40px 0;
+        overflow-wrap: break-word;
       }
 
       .title-button {
