--- a/src/styles.less
+++ b/src/styles.less
@@ -34,7 +34,12 @@ h1, h2, h3, h4, h5 {
   height: 150px;
   border-bottom-left-radius: 50% 95%;
   border-bottom-right-radius: 50% 95%;
-  //background: linear-gradient(#ff9d2f, #ff6126);
+
+  @media @max-tablet {
+    height: 100px;
+    border-bottom-left-radius: 60% 85%;
+    border-bottom-right-radius: 60% 85%;
+  }
 
   &__odd {
     background: @even-color;
